--- a/book/_quarto.yml
+++ b/book/_quarto.yml
@@ -11,6 +11,7 @@ book:
     - chapters/psychology-climate-change.md
     - chapters/behavior_change.md
     - chapters/social_identity.md
+    - chapters/cooperation.md
     - chapters/time.md
     - chapters/motivated_reasoning_misinformation.md
     - chapters/interventions.md
